@@ -2,7 +2,6 @@ package com.icandoit.boottalk.bootcamp.controller;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -19,7 +18,7 @@ public class CategoryController {
 	public ResponseEntity<List<String>> getAllCategories() {
 		List<String> categories = Arrays.stream(BootcampCategoryType.values())
 			.map(BootcampCategoryType::getKoreanName)
-			.collect(Collectors.toList());
+			.toList();
 
 		return ResponseEntity.ok(categories);
 	}
